--- a/adk_tools/vertexai_search_tool_agent/.env
+++ b/adk_tools/vertexai_search_tool_agent/.env
@@ -1,3 +1,4 @@
 GOOGLE_GENAI_USE_VERTEXAI=TRUE
-GOOGLE_CLOUD_PROJECT=YOUR_PROJECT_ID_HERE
+GOOGLE_CLOUD_PROJECT=qwiklabs-gcp-01-a80a34502ff4
 GOOGLE_CLOUD_LOCATION=us-central1
+MODEL=gemini-2.0-flash-001
